--- a/controller/head.html
+++ b/controller/head.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>HebdoTest</title>
+	<title>RankStat</title>
 	<link href="css/style.css" rel="stylesheet">
-	<link class="favicon" href="../icon/trophy-solid.svg" rel="shortcut icon" type="image/x-icon">
+	<link class="favicon" href="icon/trophy-solid.svg" rel="shortcut icon" type="image/x-icon">
 </head>
 <body>
